--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FreshFruit Haven - Premium Fruits Delivered</title>
+    <title>FreshFruit Haven - Premium Fruits</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -74,7 +74,7 @@
                 <p class="text-xl mb-6">Enjoy nature's candy at its freshest. We source directly from local farms for maximum flavor and nutrition.</p>
                 <div class="flex space-x-4">
                     <a href="#fruits" class="bg-white text-green-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100 transition">Shop Now</a>
-                    <a href="#about" class="border-2 border-white px-6 py-3 rounded-lg font-semibold hover:bg-white hover:text-green-600 transition">Learn More</a>
+                    <a href="#about" class="border-2 border-white px-6 py-3 rounded-lg font-semibold hover:bg-white hover:text-green-600 transition">Explore Products</a>
                 </div>
             </div>
             <div class="md:w-1/2 flex justify-center">
@@ -713,3 +713,4 @@
     </script>
 </body>
 </html>
+
